# acronym-api

./: .env  Cargo.toml  README.md
src/: db.rs  main.rs  rest.rs
